--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -16,26 +16,27 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="250dp"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="#0e0d0e"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Body1">
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/food_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="250dp"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax" />
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:title="Food Name"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_height="250dp"
                 app:layout_collapseMode="parallax"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:title="Food Name"
 
                 />
 
@@ -45,60 +46,63 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
-        app:layout_behavior= "@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="5dp"
                 app:cardUseCompatPadding="true">
+
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/food_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
                         android:text="Food Name"
                         android:textColor="@color/black"
                         android:textSize="20sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:id="@+id/layout_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
+
                         <TextView
                             android:id="@+id/food_price"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:padding="12dp"
                             android:gravity="end"
+                            android:padding="12dp"
                             android:text="10000"
                             android:textColor="@color/black"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:layout_weight="3"
                             android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:padding="12dp"
                             android:text="vnđ"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:padding="12dp"
-                            android:layout_height="wrap_content"/>
-
+                            android:textSize="20sp" />
 
 
                     </LinearLayout>
@@ -107,49 +111,52 @@
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:orientation="horizontal">
+
                         <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+                            android:id="@+id/number_button"
                             android:layout_width="100dp"
                             android:layout_height="match_parent"
-                            android:id="@+id/number_button"
-                            app:textSize="8sp"
-                            app:backGroundColor="@color/btnFood"
-                            app:initialNumber="1"
                             android:background="@drawable/button1"
-                            app:finalNumber="20"/>
+                            app:backGroundColor="@color/btnFood"
+                            app:finalNumber="20"
+                            app:initialNumber="1"
+                            app:textSize="8sp" />
+
                         <ImageView
                             android:id="@+id/buttonIncrease"
                             android:layout_width="40dp"
-                            android:layout_marginStart="-35dp"
                             android:layout_height="match_parent"
+                            android:layout_marginStart="-35dp"
                             android:background="@drawable/img_2"
-                            android:backgroundTint="@color/white"/>
+                            android:backgroundTint="@color/white" />
+
                         <ImageView
                             android:id="@+id/buttonDecrease"
                             android:layout_width="40dp"
-                            android:layout_marginStart="-110dp"
                             android:layout_height="match_parent"
+                            android:layout_marginStart="-110dp"
                             android:background="@drawable/ic_minus"
-                            android:backgroundTint="@color/white"/>
+                            android:backgroundTint="@color/white" />
                     </LinearLayout>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
 
                 <TextView
                     android:id="@+id/food_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:lineSpacingMultiplier="1.5"
                     android:padding="10dp"
                     android:text="Description"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textColor="@color/black" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -159,9 +166,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/nestedScrollView"
+        android:layout_marginTop="16dp"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="25dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="25dp"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatButton
@@ -187,5 +196,4 @@
     </LinearLayout>
 
 
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
