--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -6,10 +6,33 @@
     android:layout_height="match_parent"
     android:background="@drawable/background2"
     tools:context=".OrderStatus">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListOrders"
-        android:background="@android:color/transparent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ListOrders"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="25dp"
+        android:orientation="horizontal">
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnHomeBack"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/button2"
+            android:text="Trở về"
+            android:textColor="@color/black" />
+
+
+
+    </LinearLayout>
 </RelativeLayout>
