--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="50dp"
         android:layout_marginHorizontal="5dp"
         android:orientation="vertical">
+
         <TextView
             android:text="Số điện thoại:"
             android:textSize="20sp"
@@ -21,16 +22,17 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp" />
+
         <EditText
             android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:autofillHints="phoneMobile"
             android:inputType="phone"
-            android:text="0901234567"
             android:textColor="@color/black"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp" />
+
         <TextView
             android:text="Mật khẩu:"
             android:textSize="20sp"
@@ -38,15 +40,24 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp" />
+
         <EditText
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:autofillHints="password"
             android:inputType="numberPassword"
-            android:text="1234"
             android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tvForgotPassword"
+            android:text="Quên mật khẩu?"
+            android:textColor="@color/blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" />
+
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -61,4 +72,5 @@
         android:shadowColor="@color/black"
         android:text="Đăng nhập"
         android:textColor="@color/white" />
+
 </RelativeLayout>
