--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -64,16 +64,31 @@
             android:inputType="numberPassword"
             android:text=""
             android:textColor="@color/black" />
+        <TextView
+            android:text="Email:"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"/>
+        <EditText
+            android:id="@+id/edtEmail"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:autofillHints="email"
+            android:inputType="textEmailAddress"
+            android:text=""
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="15dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="175dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="147dp"
         android:background="@drawable/button3"
         android:text="Đăng ký"
         android:textColor="@color/white" />
