--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -48,6 +48,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/txtOrderStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
@@ -124,8 +125,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginStart="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -145,8 +145,11 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+
         </LinearLayout>
 
+
     </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
