--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -11,15 +11,19 @@
         android:id="@+id/ListOrders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="3"
+
         android:background="@android:color/transparent" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ListOrders"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="16dp"
         android:layout_gravity="bottom|center"
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="25dp"
+        android:layout_weight="1"
+
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatButton
