--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,36 +6,35 @@
     android:background="@drawable/background2"
     tools:context=".OrderStatus">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ListOrders"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-
-        android:background="@android:color/transparent" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="bottom|center"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="25dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnHomeBack"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ListOrders"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@drawable/button2"
-            android:text="Trở về"
-            android:textColor="@color/black" />
+            android:background="@android:color/transparent" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="25dp"
+            android:orientation="horizontal">
 
-
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnHomeBack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/button2"
+                android:text="Trở về"
+                android:textColor="@color/black" />
+        </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
