--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -41,6 +41,21 @@
                 android:padding="4dp"
                 android:textSize="18sp"/>
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="42dp">
+
+                <ImageButton
+                    android:id="@+id/cart_item_deleteButton"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/delete_icon_small"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
+
         </LinearLayout>
 
 
@@ -49,7 +64,8 @@
             android:gravity="center_vertical|start"
             android:layout_marginEnd="10dp"
             android:layout_width="32dp"
-            android:layout_height="32dp"/>
+            android:layout_height="32dp"
+            />
 
 
     </LinearLayout>
